# obsidian-rag

./: .gitignore  README.md  obsidian_rag  pyproject.toml  requirements.txt
skills/obsidian-rag/: SKILL.md
skills/obsidian-rag/scripts/: reindex.py
skills/obsidian-rag/src/obsidian_rag/: __main__.py
src/obsidian_rag/: chunking.py  config.py  main.py  utils.py
